2006-01-18  Yves Combe  <yves@ycombe.net>

	new menus architecture improvment.
	Resize some icons.

	* boards/awele.xml.in:
	* boards/boardicons/ear.png:
	* boards/boardicons/memory_elephant.png:
	* boards/electric.xml.in:
	* boards/experimental.xml.in:
	* boards/maze.xml.in:
	* boards/maze2DRelative.xml.in:
	* boards/maze3D.xml.in:
	* boards/mazeInvisible.xml.in:
	* boards/mazeMenu.xml.in:

2006-01-18  Yves Combe  <yves@ycombe.net>

	reorganise menus
	suppress -d filter option in menu.c
	add --experimental
	probably some boards will disappears (if typo in xml.in section).
	pass version to 7.29 to force reread xml

	* boards/Makefile.am:
	* boards/advanced_colors.xml.in:
	* boards/algebra_by.xml.in:
	* boards/algebra_group.xml.in:
	* boards/algebra_guesscount.xml.in:
	* boards/algebra_minus.xml.in:
	* boards/algebra_plus.xml.in:
	* boards/algebramenu.xml.in:
	* boards/algorithm.xml.in:
	* boards/awele.xml.in:
	* boards/babymatch.xml.in:
	* boards/babyshapes.xml.in:
	* boards/ballcatch.xml.in:
	* boards/bargame.xml.in:
	* boards/billard.xml.in:
	* boards/boardicons/boards.png:
	* boards/boardicons/discovery.png:
	* boards/boardicons/ear.png:
	* boards/boardicons/eye_colors.png:
	* boards/boardicons/geometry.png:
	* boards/boardicons/keyboard.png:
	* boards/boardicons/math.png:
	* boards/boardicons/memory_elephant.png:
	* boards/boardicons/miscelaneous.png:
	* boards/boardicons/numeration.png:
	* boards/boardicons/puzzles.png:
	* boards/boardicons/strategy.png:
	* boards/boardicons/tangram.png:
	* boards/boardicons/warning.png:
	* boards/boards.xml.in:
	* boards/chess.xml.in:
	* boards/chess_computer.xml.in:
	* boards/chess_movelearn.xml.in:
	* boards/chess_partyend.xml.in:
	* boards/chronos.xml.in:
	* boards/clockgame.xml.in:
	* boards/colors.xml.in:
	* boards/colors_group.xml.in:
	* boards/computer.xml.in:
	* boards/connect4.xml.in:
	* boards/crane.xml.in:
	* boards/discovery.xml.in:
	* boards/doubleentry.xml.in:
	* boards/draw.xml.in:
	* boards/electric.xml.in: