@@ -1,8 +1,8 @@
 Some icons comes from Marlena Smolarczyk Gallery at http://www.linuxgraphic.org/exposer/user2/index.cgi?mode=album&album=./first
-The board.png icon comes from Mandrake
 
 Images comming from http://www.openclipart.org and is public domain:
 - globe.png
 - draw.png
 - computer.png
 - searace.png and searace1player.png
+- smallnumber.png smallnumber2.png
