@@ -7,6 +7,6 @@
 	 icon="boardicons/computer.png"
 	 author="">
 	 <_title>Discover the Computer</_title>
-	 <_description>Play with computers devices.</_description>
+	 <_description>Play with computer peripherals.</_description>
   </Board>
 </GCompris>
