@@ -7,6 +7,6 @@
 	 icon="boardicons/keyboard.png"
 	 author="">
 	 <_title>Keyboard-manipulation boards</_title>
-	 <_description>Play with keyboard.</_description>
+	 <_description>Discover the keyboard.</_description>
   </Board>
 </GCompris>
