@@ -7,6 +7,6 @@
 	 icon="boardicons/strategy.png"
 	 author="">
 	 <_title>Strategy games</_title>
-	 <_description>Strategy games based activities</_description>
+	 <_description>Strategy games like chess, connect4, ...</_description>
   </Board>
 </GCompris>
