@@ -1,3 +1,15 @@
+2006-01-19  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	Improved board english description.
+	Remade dice icons based on openclipart work.
+
+	* boards/boardicons/README:
+	* boards/boardicons/smallnumbers.png:
+	* boards/boardicons/smallnumbers2.png:
+	* boards/computer.xml.in:
+	* boards/keyboard.xml.in:
+	* boards/strategy.xml.in:
+
 2006-01-18  Yves Combe  <yves@ycombe.net>
 
 	new menus architecture improvment.
